# flecs-sys

./: Cargo.toml  README.md  build.rs
examples/helloworld/: main.rs
examples/move_system/: main.rs
examples/simple/: main.rs
examples/simple_module/: main.rs  simple_module.rs
examples/simple_system/: main.rs
examples/simple_triggers/: main.rs
src/: main.rs
